--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,13 +49,14 @@ test = [
     "pytest-mock~=3.14",
     "aioresponses~=0.7",
     "pyyaml~=6.0",
+    "Faker~=0.7",
 ]
 docs = [
     "aiorequests[build]",
     "sphinx~=7.3",
     "renku_sphinx_theme",
     "graphviz~=0.20",
-    "sphinx-autodoc-typehints~=2.1",
+    "sphinx-autodoc-typehints~=2.2",
     "autodocsumm~=0.2",
     "sphinxext-opengraph~=0.9",
     "matplotlib~=3.9",
