--- a/.gitignore
+++ b/.gitignore
@@ -68,8 +68,10 @@ instance/
 # Scrapy stuff:
 .scrapy
 
-# Sphinx documentation
+# Sphinx/other documentation
 docs/_build/
+docs/aiorequests*.rst
+.grip/
 
 # PyBuilder
 .pybuilder/
@@ -154,9 +156,12 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+# system/other objects
+**.DS_Store
+
+# binary/cache files
+**.sql*
+
+# large data & log folders
+_data/
+_logs/
