--- a/tests/__resources/test_logging.yml
+++ b/tests/__resources/test_logging.yml
@@ -19,22 +19,14 @@ handlers:
     formatter: extended_colour
     stream: ext://sys.stdout
 
-  console_stat:
-    <<: *console
-    level: REPORT
-
-  console_report:
-    <<: *console
-    level: REPORT
-
   console_info:
     <<: *console
-    level: INFO_EXTRA
+    level: INFO
 
 loggers:
   test:  &logger
     level: DEBUG
-    handlers: [console_info]
+    handlers: [console_debug]
     propagate: no
 
   dev:
