--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,11 +15,11 @@ requires-python = ">=3.12"
 classifiers = [
     "Programming Language :: Python :: 3.12",
     # "Programming Language :: Python :: 3.13",
-    "License :: OSI Approved :: GNU Affero General Public License v3",
+    "License :: OSI Approved :: MIT License",
     "Operating System :: Microsoft :: Windows",
     "Operating System :: MacOS :: MacOS X",
     "Operating System :: POSIX :: Linux",
-    "Development Status :: 5 - Production/Stable",
+    "Development Status :: 3 - Alpha",
     "Natural Language :: English",
     "Intended Audience :: Developers",
 ]
