--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -6,15 +6,15 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thank you for using aiorequests and for finding the time to help make using it a better experience for everyone!
+        Thank you for using aiorequestful and for finding the time to help make using it a better experience for everyone!
 
         Note, you do not need to create an issue if you already have a fix for an issue.
 
-        You can open a [pull request](https://github.com/geo-martino/aiorequests/pulls) immediately instead.
+        You can open a [pull request](https://github.com/geo-martino/aiorequestful/pulls) immediately instead.
   - type: input
     attributes:
-      label: aiorequests version
-      description: What aiorequests version are you using?.
+      label: aiorequestful version
+      description: What aiorequestful version are you using?.
     validations:
       required: true
   - type: textarea
