--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -6,11 +6,11 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thank you for using aiorequests and for finding the time to help make using it a better experience for everyone!
+        Thank you for using aiorequestful and for finding the time to help make using it a better experience for everyone!
         
         Note, you do not need to create an issue if you have already developed a feature to release.
 
-        You can open a [pull request](https://github.com/geo-martino/aiorequests/pulls) immediately instead.
+        You can open a [pull request](https://github.com/geo-martino/aiorequestful/pulls) immediately instead.
   - type: textarea
     attributes:
       label: Description
