--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
     needs: validate
     environment:
       name: pypi
-      url: https://pypi.org/p/aiorequests
+      url: https://pypi.org/p/aiorequestful
     permissions:
       id-token: write
     steps:
