--- a/.github/workflows/docs_build.yml
+++ b/.github/workflows/docs_build.yml
@@ -5,7 +5,7 @@ on:
     branches: [ master ]
     paths:
       - pyproject.toml
-      - aiorequests/**
+      - aiorequestful/**
       - docs/**
 
   workflow_dispatch:
