--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,8 @@ Issues = "https://github.com/geo-martino/aiorequestful/issues"
 
 [tool.hatch.version]
 source = "versioningit"
+
+[tool.versioningit]
 default-version = "0.0.0"
 
 [tool.versioningit.format]
