--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ name = "aiorequestful"
 authors = [
   { name="George Martin Marino", email="gm.engineer+aiorequestful@pm.me" },
 ]
-description = "An Asynchronous RESTful API requests framework for asyncio and Python"
+description = "An Asynchronous HTTP and RESTful API requests framework for asyncio and Python"
 readme = "README.md"
 license-files = { paths = ["LICENSE"] }
 requires-python = ">=3.12"
@@ -19,7 +19,7 @@ classifiers = [
     "Operating System :: Microsoft :: Windows",
     "Operating System :: MacOS :: MacOS X",
     "Operating System :: POSIX :: Linux",
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 4 - Beta",
     "Natural Language :: English",
     "Intended Audience :: Developers",
 ]
