--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ name = "aiorequestful"
 authors = [
   { name="George Martin Marino", email="gm.engineer+aiorequestful@pm.me" },
 ]
-description = "An Asynchronous HTTP and RESTful API requests framework for asyncio and Python"
+description = "An asynchronous HTTP and RESTful API requests framework for asyncio and Python"
 readme = "README.md"
 license-files = { paths = ["LICENSE"] }
 requires-python = ">=3.12"
