Update sphinx version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,8 +54,8 @@ test = [
 ]
 docs = [
     "aiorequestful[build]",
-    "sphinx>=7.3,<9.0",
-    "renku_sphinx_theme",
+    "sphinx>=8.0,<9.0",
+    "renku_sphinx_theme~=0.4",
     "graphviz~=0.20",
     "sphinx-autodoc-typehints~=2.2",
     "autodocsumm~=0.2",
