--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,8 +24,8 @@ classifiers = [
     "Intended Audience :: Developers",
 ]
 dependencies = [
-    "aiohttp~=3.9",
-    "python-dateutil~=2.9",
+    "aiohttp>=10.9.5,<11.0",
+    "python-dateutil>=2.9,<3.0",
 ]
 
 [project.optional-dependencies]
