--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ build = [
 test = [
     "aiorequestful[all]",
     "pytest~=8.2",
-    "pytest-asyncio~=0.23",
+    "pytest-asyncio>=0.24,<1.0",
     "pytest-xdist~=3.6",
     "pytest-mock~=3.14",
     "aioresponses~=0.7",
