--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,8 +24,8 @@ classifiers = [
     "Intended Audience :: Developers",
 ]
 dependencies = [
-    "aiohttp>=3.10.5,<4.0",
-    "python-dateutil>=2.9,<3.0",
+    "aiohttp~=3.11",
+    "python-dateutil~=2.9",
 ]
 
 [project.optional-dependencies]
@@ -39,12 +39,12 @@ sqlite = [
 
 # dev dependencies
 build = [
-    "hatch",
-    "versioningit",
+    "hatch~=1.13",
+    "versioningit~=3.1",
 ]
 test = [
     "aiorequestful[all]",
-    "pytest~=8.2",
+    "pytest~=8.3",
     "pytest-asyncio>=0.24,<1.0",
     "pytest-xdist~=3.6",
     "pytest-mock~=3.14",
@@ -54,14 +54,14 @@ test = [
 ]
 docs = [
     "aiorequestful[build]",
-    "sphinx>=8.0.2,<9.0",
-    "sphinx-rtd-theme>=3.0.0rc1,<4.0",
+    "sphinx>=8.1.3,<9.0",
+    "sphinx-rtd-theme>=3.0.2,<4.0",
     "graphviz>=0.20.3,<1.0",
-    "sphinx-autodoc-typehints>=2.2.3,<3.0",
-    "autodocsumm>=0.2.13,<1.0",
+    "sphinx-autodoc-typehints>=2.5.0,<3.0",
+    "autodocsumm>=0.2.14,<1.0",
     "sphinxext-opengraph>=0.9.1,<1.0",
-    "matplotlib>=3.9.1,<4.0",
-    "sphinx-new-tab-link>=0.5.2,<1.0",
+    "matplotlib>=3.9.2,<4.0",
+    "sphinx-new-tab-link>=0.6.1,<1.0",
 ]
 dev = [
     "aiorequestful[test,docs]",
