--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -1,7 +1,7 @@
 name: "✅ Validate package deployment   "
 
 on:
-  pull_request_target:
+  pull_request:
     branches: [ master ]
     paths:
       - pyproject.toml
