--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,4 +104,4 @@ markers = [
     "manual: marks tests to be run only when manually directed to by the developer",
 ]
 asyncio_mode = "auto"
-asyncio_default_fixture_loop_scope = "class"
+asyncio_default_fixture_loop_scope = "session"
