fix python version in worflows

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -51,10 +51,10 @@ jobs:
         include:
           - os: windows-latest
             name: 🪟 Windows
-            python-version: [ 3.12, 3.13 ]
+            python-version: 3.13
           - os: macos-latest
             name: 🍎 Mac
-            python-version: [ 3.12, 3.13 ]
+            python-version: 3.13
     steps:
       - name: 🛒 Checkout
         uses: actions/checkout@v4
